@@ -454,7 +454,7 @@ caseid='' # [sng] Case ID
 caseid_xmp='famipc5_ne30_v0.3_00003' # [sng] Case ID for examples
 cf_flg='Yes' # [sng] Produce CF climatology attribute?
 clm_flg='Yes' # [sng] Generate climatology
-clm_md='mth' # [sng] Climatology mode ('ann', 'dly', or 'mth')
+clm_md='mth' # [sng] Climatology mode ('ann', 'dly', 'hgh_frq', or 'mth')
 csn_flg='No' # [flg] Trigger season-processing code
 csn_lst='mam,jja,son,djf' # [sng] Seasons to output (subset of mam,jja,son,djf,jfm,amj,jas,ond,fm,on)
 d2f_flg='No' # [flg] Convert double-precision fields to single-precision
