@@ -1,3 +1,9 @@
+2020-04-08  Charlie Zender  <zender@uci.edu>
+
+	* ncks alter nco_prn_att() to debug netCDF 4.7.4 changes in nc_inq_var_filter()
+
+	* ncap2 incomplete patch nco_gsl.c/h for when GSL not enabled
+
 2020-04-07  Charlie Zender  <zender@uci.edu>
 
 	* ncclimo hgh_frq works for PRECT with ragged dates, non-integral years
